Mathematical Methods/Numerical Analysis/2023-09-05 python in class.txt
>>> 2**(-52)
2.220446049250313e-16
>>> np.finfo(np.float64).eps
2.220446049250313e-16
>>> np.finfo(np.float64).eps
2.220446049250313e-16
>>> round(1.235,0)
1.0
>>> round(1.235,1)
1.2
>>> round(1.235,3)
1.235
>>> round(0.445,3)
0.445
>>> round(0.445,2)
0.45
>>> x=0.01
>>> (1-n.cos(x))/np.sin(x)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'n' is not defined
>>> (1-np.cos(x))/np.sin(x)
0.00500004166708478
>>> x=0.0001
>>> (1-np.cos(x))/np.sin(x)
4.999999977945978e-05
>>> x=0.000001
>>> (1-np.cos(x))/np.sin(x)
5.000444502912538e-07
>>> x=1e-10
>>> x
1e-10
>>> (1-np.cos(x))/np.sin(x)
0.0
>>> (1-np.cos(x))/np.sin(x)
0.0
>>> 1/x*(1-np.cos(x))/np.sin(x))
  File "<stdin>", line 1
    1/x*(1-np.cos(x))/np.sin(x))
                               ^
SyntaxError: unmatched ')'
>>> 1/x*(1-np.cos(x))/np.sin(x)
0.0
>>> x=1e-5
>>> 1/x*(1-np.cos(x))/np.sin(x)
0.5000000413785187
>>> 
(num) jmandel@MaccatSSD ~ % python3
Python 3.8.17 (default, Jul  5 2023, 16:18:40) 
[Clang 14.0.6 ] :: Anaconda, Inc. on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import numpy as np
>>> np.sqrt(9.01)
3.0016662039607267
>>> np.sqrt(9.01)-3
0.0016662039607266976
>>> 0.01/6
0.0016666666666666668
>>> 0.01/(np.sqrt(9.01+3))
0.0028855492841238064
>>> 0.01/(np.sqrt(9.01)+3)
0.0016662039607268765
>>> np.sqrt(9.0000001)-3
1.666666671340522e-08
>>> 0.00000011/(np.sqrt(9.00000001)+3)
1.8333333328240742e-08
>>> 0.0000001/(np.sqrt(9.00000001)+3)
1.6666666662037036e-08
>>> x=1
>>> (1-np.cos(x))/np.sin(x)
0.5463024898437905
>>> x=0.1
>>> (1-np.cos(x))/np.sin(x)
0.050041708375539354
>>> x=0.01
>>> (1-np.cos(x))/np.sin(x)
0.00500004166708478
>>> x=0.1
>>> (1/x)*(1-np.cos(x))/np.sin(x)
0.5004170837553935
>>> x=0.01
>>> (1/x)*(1-np.cos(x))/np.sin(x)
0.500004166708478
>>> x=0.001
>>> (1/x)*(1-np.cos(x))/np.sin(x)
0.5000000416588394
>>> x=0.0001
>>> (1/x)*(1-np.cos(x))/np.sin(x)
0.4999999977945978
>>> x=0.00001
>>> (1/x)*(1-np.cos(x))/np.sin(x)
0.5000000413785187
>>> x=0.000001
>>> (1/x)*(1-np.cos(x))/np.sin(x)
0.5000444502912539
>>> x=0.0000001
>>> (1/x)*(1-np.cos(x))/np.sin(x)
0.49960036108132133
>>> x=0.00000001
>>> (1/x)*(1-np.cos(x))/np.sin(x)
0.0
>>> np.cos(x)
1.0
>>> x
1e-08
>>> np.cos(1e-8)
1.0
>>> x
1e-08
>>> (1/x)*np.sin(x)/(1+np.cos(x))
0.5
>>> x=1e-7
>>> (1/x)*np.sin(x)/(1+np.cos(x))
0.5000000000000003
>>> x=1e-10
>>> (1/x)*np.sin(x)/(1+np.cos(x))
0.5
>>> x=1e-50
>>> (1/x)*np.sin(x)/(1+np.cos(x))
0.5
>>> 1/x
1e+50
>>> np.sin(x)
1e-50
>>> np.sin(x)/x
1.0
>>> 1.85**20
220513.18804417783
>>> np.finfo(np.float64).eps
2.220446049250313e-16
>>> 2.0**-52
2.220446049250313e-16
>>> 
